--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
+    "expo-av": "^14.0.7",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.14.1",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-dotenv": "^0.2.2",
     "typescript": "^5.1.3"
   },
   "private": true
