--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "firebase": "^10.14.1",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-reanimated": "~3.10.1"
+    "react-native-reanimated": "~3.10.1",
+    "react-native-uuid": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
