--- a/package.json
+++ b/package.json
@@ -9,24 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-av": "^14.0.7",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^52.0.7",
+    "expo-av": "~15.0.1",
+    "expo-status-bar": "~2.0.0",
     "firebase": "^10.14.1",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-reanimated": "~3.10.1",
+    "react": "18.3.1",
+    "react-native": "0.76.2",
+    "react-native-reanimated": "~3.16.1",
     "react-native-uuid": "^2.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@types/react": "~18.2.45",
+    "@types/react": "~18.3.12",
     "@types/react-native-dotenv": "^0.2.2",
     "typescript": "^5.1.3"
   },
